--- a/backend/package.json
+++ b/backend/package.json
@@ -23,16 +23,21 @@
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
     "@fastify/oauth2": "^8.0.1",
+    "@fastify/postgres": "^6.0.1",
     "@fastify/sensible": "^6.0.1",
     "@fastify/swagger": "^9.0.0",
     "@fastify/swagger-ui": "^5.0.1",
     "@sinclair/typebox": "^0.33.12",
+    "bcryptjs": "^2.4.3",
     "fastify": "^5.0.0",
     "fastify-cli": "^6.3.0",
-    "fastify-plugin": "^4.0.0"
+    "fastify-plugin": "^4.0.0",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.4.4",
+    "@types/pg": "^8.11.10",
     "c8": "^10.1.2",
     "concurrently": "^8.2.2",
     "fastify-tsconfig": "^2.0.0",
