--- a/data-source/package.json
+++ b/data-source/package.json
@@ -32,11 +32,14 @@
     "fastify": "^5.0.0",
     "fastify-cli": "^6.3.0",
     "fastify-plugin": "^4.0.0",
+    "jsonlines": "^0.1.1",
+    "mongodb": "^6.10.0",
     "pg": "^8.13.0",
     "puppeteer": "^23.4.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonlines": "^0.1.5",
     "@types/node": "^20.4.4",
     "@types/pg": "^8.11.10",
     "c8": "^10.1.2",
