--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ PGPASSWORD=postgres
 PGPORT=5432
 PGHOST=database-proyecto
 FRONTEND_PORT=4200
+FRONTEND_URL=localhost
+GOOGLE_CLIENT_ID=TU-CLIENT-ID
+GOOGLE_CLIENT_SECRET=TU-GOOGLE-CLIENT-SECRET
