Docker compose with the things from main

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -78,7 +78,7 @@ services:
   mongo:
     image: mongo:latest
     container_name: mongo
+    build:
+      context: ./mongo
     ports:
       - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
