--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -1,3 +1,3 @@
 # Dockerfile for Mongo service
 FROM mongo:latest
-COPY ./init-mongo.js /docker-entrypoint-initdb.d/
+COPY ./*.js /docker-entrypoint-initdb.d/
