--- a/data-source/package.json
+++ b/data-source/package.json
@@ -19,6 +19,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "@fastify/autoload": "^5.0.0",
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
@@ -46,6 +48,10 @@
     "concurrently": "^8.2.2",
     "fastify-tsconfig": "^2.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.52.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
