Mucho en data-source y no me acuerdo qué en layout component

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -76,7 +76,7 @@ services:
       - FRONTEND_URL=${FRONTEND_URL}
 
   mongodb:
-    container_name: docker-mongo
+    container_name: mongodb
     ports:
       - "2717:27017"
     image: mongo:latest
